# bmath

./: .gitignore  CMakeLists.txt
include/bw/bmath/: bint.hpp
include/bw/bmath/bint/: bint_functions.hpp  bint_type.hpp  common.hpp
include/bw/bmt/: bint.hpp
include/bw/bmt/bint/: bint_functions.hpp  bint_type.hpp  common.hpp
include/bwd/bmt/: bint.hpp
include/bwd/bmt/detail/: type_bint.hpp  type_bint_operators.hpp
src/: bint.cpp  bint_add.cpp  bint_compare.cpp  bint_divide.cpp  bint_multiply.cpp  bint_negate.cpp  bint_set.cpp  bint_subtract.cpp  bint_to_string.cpp  bint_type.cpp
src/bint/: bint_arithmetics.cxx  bint_comparison.cxx  bint_constants.cxx  bint_constructors.cxx  bint_limb_utilities.cxx  bint_utilities.cxx
src/internal/: bint_internal.cpp  bint_internal.hpp
test/: CMakeLists.txt
test/bint/: CMakeLists.txt  test_construction.cxx  test_main.cxx
tests/: CMakeLists.txt  tests.cpp
